examples/nginx-simple/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: nginx
  name: nginx
spec:
  containers:
  - image: nginx
    imagePullPolicy: Always
    name: nginx
    ports:
    - containerPort: 80
    resources:
      requests:
        cpu: 100m
        memory: 20Mi
      limits:
        cpu: 500m
        memory: 100Mi
