examples/nginx-simple/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx-service
  name: nginx-service
spec:
  ports:
  - name: "8080"
    port: 30080
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx
  type: NodePort
